<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">

        <ImageView
            android:id="@+id/bookIconImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookIconImageView"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp">


        </EditText>


        <EditText

            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_email"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:paddingBottom="20dp"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/login_pass"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:background="#00008b" />

        <RadioButton

            android:id="@+id/remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Remember Password"
            android:textSize="12dp"
            android:checked="false"/>

        <Button
            android:id="@+id/reg_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/remember_password"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:background="#00008b"
            />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
